Fix CORS to read from CORS_ORIGINS env variable